--- a/01-jenkins-setup/ansible/roles/jenkins-agent/tasks/ssh.yaml
+++ b/01-jenkins-setup/ansible/roles/jenkins-agent/tasks/ssh.yaml
@@ -1,10 +1,16 @@
 
 - name: Retrieve secret value from AWS Parameter Store
-  script: "{{ playbook_dir }}/scripts/get-ssh-pub.py {{ public_key_path }}"
-  args:
-    executable: /usr/bin/python3
-    remote_src: yes
+  shell: |
+    aws ssm get-parameter --name {{ public_key_path }} --region us-west-2 --with-decryption --query "Parameter.Value" --output text
+    #args:
+    #executable: /usr/bin/python3
   register: secret_value
+#- name: Retrieve secret value from AWS Parameter Store
+#  shell: "{{ playbook_dir }}/scripts/get-ssh-pub.py {{ public_key_path }}"
+#  args:
+#    executable: /usr/bin/python3
+      ##remote_src: yes
+#  register: secret_value
 
 - name: Print registered variable
   debug:
